--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -2,6 +2,6 @@
     <form id="form">
       <label>Email</label>
       <input id="user" type="text" [formControl]="user"/>
-      <button id="submit" (click)="onSubmit()" >Connexion</button>
+      <button type="button" id="submit" (click)="onSubmit()" >Connexion</button>
   </form>
 </div>
