--- a/src/app/create-post-form/create-post-form.component.html
+++ b/src/app/create-post-form/create-post-form.component.html
@@ -33,7 +33,7 @@
   </div>
   </div>
   <label>Hashtags</label>
-  <input type="text" formControlName="hashtag">
+  <input type="text" formControlName="hashtags">
   <button [class.loader]="isLoading" id="submit" (click)="generatePost()">Soumettre</button>
 </div>
 
