🎨 CODE refactoring and design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body>
-<h1 id="title">Génération de poste à l'aide de chatGPT</h1>
+<h1 id="title">Génération de postes à l'aide de chatGPT</h1>
 <app-connexion *ngIf="!user"></app-connexion>
   <div class="content">
     <div class="left-content">
