--- a/src/app/last-prompt-list/last-prompt-list.component.html
+++ b/src/app/last-prompt-list/last-prompt-list.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content" *ngIf="lastPromptList && lastPromptList.length !== 0">
   <h2>Derniers Postes :</h2>
   <div class="card" (click)="refreshFormData(lastPromptItem.options, lastPromptItem.result)" *ngFor="let lastPromptItem of lastPromptList">
     <p class="card-label">{{lastPromptItem.label}}</p>
