--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,7 +1,10 @@
-<div>
-    <form id="form">
-      <label>Email</label>
-      <input id="user" type="text" [formControl]="user"/>
+<div class="content">
+    <form id="form" [formGroup]="userForm">
+      <label for="user" class="required">Email</label>
+      <input id="user" type="text" formControlName="email"/>
+      <div class="alert-error" *ngIf="userForm.controls['email'].errors && (userForm.controls['email'].touched || userForm.controls['email'].dirty)">
+      Le champ doit être un email valide.
+      </div>
       <button type="button" id="submit" (click)="onSubmit()" >Connexion</button>
   </form>
 </div>
