--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,7 @@
   text-align: center;
   font-size: 3rem;
   text-decoration: underline;
+  font-family: Calibri, "Helvetica Neue", sans-serif;
 }
 
 
